--- a/package.json
+++ b/package.json
@@ -5,23 +5,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile-browser": "npx webpack",
-    "compile-node": "babel --presets es2015 -d dist/ src",
+    "compile-node": "npx babel -d dist/ src",
     "train": "npm run compile-node && node dist/coordinator.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-es2015": "^7.0.0-beta.53",
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.3",
+    "@babel/polyfill": "^7.4.4",
     "async": "^2.6.2",
     "debug": "^4.1.1",
     "uuid": "^3.3.2",
