--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   "dependencies": {
     "async": "^2.6.2",
     "debug": "^4.1.1",
+    "koa": "^2.11.0",
+    "koa-json": "^2.0.2",
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
     "uuid": "^3.3.2",
     "winston": "^3.2.1"
   }
