Got vue working

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "evolutionary-ai-battle",
   "version": "1.0.0",
   "description": "A 2D battleground simulation where AI's fight each other and evolve over time.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/timjrobinson/evolutionary-ai-battle.git"
+  },
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,6 +15,12 @@
   },
   "author": "Tim Robinson <tim@timjrobinson.com>",
   "license": "MIT",
+  "keywords": [
+    "NEAT",
+    "neural network",
+    "evolutionary neural network",
+    "ai battle"
+  ],
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
@@ -26,6 +36,7 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "uuid": "^3.3.2",
+    "vue": "^2.6.11",
     "winston": "^3.2.1"
   }
 }
