Automatically open site, add configurable port/host
- Allow the user to configure the host and port that the webserver runs
on.
- Automatically open the URL in the users browser when running the
webserver.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "koa-json": "^2.0.2",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
+    "open": "^7.0.3",
     "uuid": "^3.4.0",
     "vue": "^2.6.11"
   }
